# tin-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
channel/: Message.cpp  Message.h
client/: AdminClient.cpp  Client.cpp
include/: AdminClient.h  AdminServer.h  ChannelManager.h  Client.h  ClientInfo.cpp  ClientInfo.h  Logger.h  MessageHistory.h  MessageParser.h  Server.h  constants.h  sockets.h
server/: AdminServer.cpp  Server.cpp  ServerAdmin.cpp
server/admin-server/: ChannelManager.cpp  Logger.cpp  MessageParser.cpp
